-fixed refaster warnings -fixed Spotbug errors